# Arguino

./: .gitignore  CMakeLists.txt  README.md  RP_Specifikacia.odt  TCPConnection.hpp  arguino.ino  preprocess.bat  preprocess.sh
backend/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  vcpkg.json
backend/executable/: .gitignore  CMakeLists.txt  encoder.hpp  ipcAdapter.hpp  main.cpp  preprocess.bat  programOptions.hpp
backend/executable/encoders/: textEncoder.cpp
backend/executable/ipc/: shmemAdapter.cpp  tcpAdapter.cpp
backend/libs/: CMakeLists.txt
backend/libs/logger/: CMakeLists.txt  FileLogger.hpp  ILogger.hpp  Messages.hpp
backend/shared-memory/: CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.hpp  MemoryRegion.cpp  MemoryRegion.hpp  ProducerConsumerWrapper.cpp  ProducerConsumerWrapper.hpp  TwoWayBuffer.cpp  TwoWayBuffer.hpp
backend/shared-memory-adapter/: CMakeLists.txt  IpcHandler.cpp
backend/simulator/: Arduino.cpp  Arduino.h  ArduinoState.cpp  ArduinoState.hpp  CMakeLists.txt  EventQueue.cpp  EventQueue.hpp  Events.cpp  Events.hpp  Simulator.cpp  Simulator.hpp
backend/tcp-adapter/: CMakeLists.txt
backend/tcp-server/: CMakeLists.txt  ConnectionHandler.cpp  ConnectionHandler.hpp  TcpServer.cpp
core/: .clang-format  CMakeLists.txt  PInoutState.cpp  PinoutState.hpp  TCPConnection.cpp  TCPConnection.hpp  main.cpp
core/executable/: .gitignore  ArguinoConnectionHandler.hpp  CMakeLists.txt  StateEncoder.hpp  encoder.hpp  ipcAdapter.hpp  main.cpp  preprocess.sh  programOptions.cpp  programOptions.hpp  sketch.cpp  tcpAdapter.cpp
core/executable/encoders/: textEncoder.cpp
core/executable/ipc/: tcpAdapter.cpp
core/libs/: CMakeLists.txt
core/libs/logger/: CMakeLists.txt  FileLogger.cpp  FileLogger.hpp  ILogger.hpp  Messages.hpp
core/libs/timer/: Timer.cpp  Timer.hpp
core/logger/: FileLogger.cpp  FileLogger.hpp  ILogger.hpp  Messages.hpp
core/shared-memory-adapter/: CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.hpp  IpcHandler.cpp  IpcHandler.hpp  MemoryRegion.hpp  ShmemHandler.cpp  ShmemHandler.hpp  ShmemRegion.cpp  ShmemRegion.hpp  ShmemWriter.cpp  ShmemWriter.hpp
core/simulator/: Arduino.cpp  Arduino.h  ArduinoState.cpp  ArduinoState.hpp  CMakeLists.txt  EventQueue.cpp  EventQueue.hpp  Events.cpp  Events.hpp  LogMessages.hpp  Simulator.cpp  Simulator.hpp  SimulatorTypes.hpp
core/simulator/includes/: Arduino.h
core/tcp-adapter/: ArguinoConnectionHandler.cpp  ArguinoConnectionHandler.hpp  CMakeLists.txt  ConnectionHandler.cpp  ConnectionHandler.hpp  LogMessages.hpp  StateEncoder.hpp  TcpServer.cpp  TcpServer.hpp  TestAdapter.cpp  TestAdapter.hpp
core/timer/: CMakeLists.txt  Timer.cpp  Timer.hpp
core/ulibpp/: CMakeLists.txt
core/ulibpp/h/: _upp_guess.h  upp_def.hpp  upp_file.hpp  upp_locale.hpp  upp_shrmem.hpp
core/ulibpp/src/: CMakeLists.txt  upp_file.cpp  upp_locale.cpp
docs/: RP_Specifikacia.odt  component_addons_doc.md  shared_memory_protocol.md  specification-draft.md
frontend/: .gitignore  gui.sln
frontend/ComponentManagement/: ComponentManagement.csproj  ComponentManager.cs
frontend/ComponentManagement/Circuitry/: Component.cs  DigitalState.cs  ElectricalNode.cs  Pin.cs
frontend/ComponentManagement/Factory/: ISceneLoader.cs  SceneFactory.cs
frontend/ComponentManagement/Graph/: Component.cs  ElectricalNode.cs  Pin.cs
frontend/ComponentManagement/Loaders/: SkiaSvgLoader.cs  YamlConfigurationLoader.cs  YamlSceneLoader.cs
frontend/ComponentManagement/Scenes/: Component.cs  ComponentConfiguration.cs  Scene.cs  Transform.cs
frontend/ComponentManagement/Utils/: YamlUtils.cs
frontend/IpcAdapter/: Event.cs  IIpcAdapter.cs
frontend/IpcAdapter/Encoders/: IEncoder.cs  TextEncoder.cs
frontend/Logger/: FileLogger.cs  ILogger.cs
frontend/Main/: CommandLineArguments.cs  Main.csproj  MainController.cs  Program.cs
frontend/Main/ViewModels/: CircuitCanvas.cs  Timer.cs
frontend/Main/Views/: App.axaml  MainWindow.axaml
frontend/Scenes/: buttons.yaml
frontend/SharedMemoryAdapter/: CircularBuffer.cs  SharedMemoryAdapter.cs  SharedMemoryAdapter.csproj  TwoWayBuffer.cs
frontend/TcpAdapter/: TcpAdapter.csproj  TcpClient.cs  TcpMessageHandler.cs
gui/: .gitignore  arduinoScene.yaml  gui.sln  scene.yaml
gui/ArduinoAdapter/: IArduinoAdapter.cs
gui/ComponentManagement/: Component.cs  ComponentConfiguration.cs  ComponentManagement.csproj  ComponentManager.cs  Scene.cs  SkiaSvgLoader.cs  Transform.cs
gui/ComponentManagement/Factory/: ComponentFactory.cs  IConfigurationLoader.cs  ISceneLoader.cs  ISvgLoader.cs  SceneFactory.cs
gui/ComponentManagement/Graph/: Component.cs  ComponentNode.cs  DigitalState.cs  ElectricalNode.cs  PIn.cs  Pin.cs  PinConnection.cs
gui/ComponentManagement/Loaders/: SceneLoader.cs  (+3 more)
gui/Events/: ArduinoEvent.cs  BinaryEncoder.cs  IArduinoEventEncoder.cs  SnapshotEncoder.cs
gui/IpcAdapter/: Event.cs  IIpcAdapter.cs  IpcAdapter.csproj
gui/Logger/: CompositeLogger.cs  FileLogger.cs  ILogger.cs  IMessage.cs  Messages.cs
gui/Main/: CommandLineArguments.cs  Main.csproj  MainController.cs  Program.cs
gui/Scenes/: test1.yaml
gui/TcpAdapter/: ArduinoState.cs  IEncoder.cs  IMessageHandler.cs  LogMessages.cs  MessageHandler.cs  StateEncoder.cs  TcpAdapter.csproj  TcpClient.cs  TcpMessageHandler.cs  TestMessageHandler.cs  TestTcpClient.cs
gui/gui/: App.axaml  App.axaml.cs  MainWindow.axaml  Program.cs  gui.csproj
test/: test.ino
tests/: buttons.scene.yaml  minimal.scene.yaml  test1.scene.yaml  transforms.scene.yaml  wave.scene.yaml
tests/buttons/: buttons.ino
tests/wave/: button.h  wave.ino
thesis/: .gitignore  abstract-cs.tex  abstract-en.tex  bibliography.bib  ch0_intro.tex  ch1_architecture.tex  ch1_arduino.tex  ch2_architecture.tex  ch2_implementation.tex  ch3_backend_implementation.tex  ch3_developer_docs.tex  ch3_implementation.tex  ch4_developer_docs.tex  ch4_frontend_implementation.tex  ch5_developer_docs.tex  epilog.tex  macros.tex  metadata.tex  preface.tex  thesis.bbl  thesis.blg  thesis.fdb_latexmk  thesis.fls  thesis.tex
(+79 files in other folders)
